# indexify

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .justfile  .prettierignore  .prettierrc.yaml  AGENTS.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  askama.toml  build.rs  client_cert_config  custom_config.yaml  docker-compose.yaml  install_python_deps.sh  local_config.yaml  local_coordinator_config.yaml  local_coordinator_raft_config.yaml  local_executor_config.yaml  local_server_config.yaml  local_server_config_2.yaml  local_server_config_3.yaml  package-lock.json  prometheus.yaml  pyproject.toml  render.yaml  run_tests.sh  rust-toolchain.toml  rustfmt.toml  sample_config.yaml  setup.py  setup_libtorch_cpu.sh  statefulset-indexify-server-qauat.yaml
crates/blob-store/: Cargo.toml
crates/blob_store/: Cargo.toml  README.md
crates/container-daemon/: Cargo.toml
crates/dataplane/: Cargo.toml  README.md  build.rs  sample_config.yaml  sample_firecracker_config.yaml
crates/indexify_api/: Cargo.toml
crates/indexify_extractor/: Cargo.toml  askama.toml
crates/indexify_internal_api/: Cargo.toml
crates/indexify_proto/: Cargo.toml
crates/otlp-logs-exporter/: Cargo.toml  README.md
crates/proto-api/: Cargo.toml  build.rs
crates/server/: Cargo.toml  build.rs  sample_config.yaml
dataplane/: Cargo.toml  build.rs
dataplane-cli/: Cargo.toml
dataplane-cli/src/: main.rs
dataplane-core/: Cargo.toml  build.rs
dataplane-core/src/: config.rs  containers.rs  executor_client.rs  function_executor_manager.rs  hardware_probe.rs  heartbeat.rs  lib.rs
dataplane/proto/: function_executor.proto  status.proto
dataplane/src/: main.rs
executor/: Cargo.toml  README.md  config.yaml  pyproject.toml
executor-py/: .gitignore  Makefile  README.md  pyproject.toml
executor-py/indexify_executor/: __main__.py  agent.py  api_objects.py  content_downloader.py  downloader.py  executor_tasks.py  function_worker.py  indexify_executor.py  main.py  task_reporter.py  task_store.py  version.py
executor-py/tests/: test_function_worker.py  test_remote_client.py
executor/src/: main.rs
executor/tests/: README.md  pyproject.toml  run_tests.sh
extractors/: dpr_onnx.py  embedding_extractor.py  entity_extractor.py  flag_embedding.py  identity_hash_embedding.py  identity_hash_embedding.yaml  language_extractor.py  language_extractor.yaml  mini_lm_l6.yaml  minilm_l6_embedding.py  pdf_embedder.py  pdf_markdown_extractor.py  pdf_markdown_extractor.yaml  pyproject.toml  sentiment_extractor.py  setup.py  simple_invoice_parser.py  simple_invoice_parser.yaml
extractors/indexify_extractors/: embedding_extractor.py  entity_extractor.py  extractor_base.py  sentence_transformer.py  sentiment_extractor.py
extractors/tests/: test_dpr.py  test_entity_extractor.py  test_st_embeddings.py
function_executor/: Makefile  pyproject.toml
function_executor/tests/: README.md  pyproject.toml  run_tests.sh
gateway/: Cargo.toml  build.rs  gateway.toml
gateway/src/: collector.rs  config.rs  gate_server.rs  lib.rs  service.rs
indexify/: Makefile  README.md  pyproject.toml  sleep_app.py
indexify/benchmarks/: fast_functions_with_one_slow.py
indexify/server/: .dockerignore  Cargo.toml  Makefile  sample_config.yaml
indexify/tests/: .gitignore  Dockerfile.test-function  Dockerfile.test-function-gpu  README.md  dataplane_config.yaml  dataplane_gpu_config.yaml  dataplane_gvisor_config.yaml  dataplane_sandbox_config.yaml  pyproject.toml  run_tests.sh  run_tests_dataplane.sh  run_tests_dataplane_gvisor.sh  run_tests_partition.sh  run_tests_phase_dataplane_cli.sh  run_tests_phase_executor_features.sh  run_tests_phase_tensorlake_sdk.sh  slow_allocs.py
langchain/: README.md  pyproject.toml
langchain/examples/: agent_memory.py  langchain_example.py
langchain/indexify_langchain/: __init__.py  langchain_example.py  retriever.py
python-sdk/: .coverage  .editorconfig  .gitignore  Makefile  README.md  foo.py  parsed_result.md  pyproject.toml
python-sdk/examples/: data_loader_local_dir.py  mtls_example.py
python-sdk/image-builder/: builder.py  runner.py
python-sdk/indexify/: __init__.py  __main__.py  base_client.py  cli.py  client.py  common_util.py  console.py  error.py  foo  http_client.py  local_client.py  local_runner.py  logging.py  remote_client.py  remote_graph.py  remote_pipeline.py  settings.py
python-sdk/tests/: README.md  docker-compose.yaml  mock_graph.py  pyproject.toml  requirements.txt  run_tests.sh  test_broken_graphs.py  test_constants.py  test_data_loader.py  test_downloader_behaviour.py  test_executor_behaviour.py  test_extractor_agent_behaviour.py  test_function_concurrency.py  test_function_data.py  test_function_executor.py  test_function_executor_request_creator.py  test_function_worker.py  test_functions.py  test_graph.py  test_graph_behaviours.py  test_graph_image_builder.py  test_graph_reduce.py  test_graph_update.py  test_graph_validation.py  test_image_hash.py  test_invoke_duration.py  test_pdf_parser.py  test_reduce.py  test_remote_router_graph.py  test_remote_simple_graph.py  test_version_and_graph_rerun.py
python_utils/: Makefile  README.md  common.mk  pyproject.toml
python_utils/tests/: README.md  pyproject.toml  run_tests.sh
sdk-py/: .editorconfig  .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
sdk-py/.devcontainer/: Dockerfile  devcontainer.json
sdk-py/examples/: agent_memory.py  benchmark.py  getting_started.py  memory_example.py  minimal.py  mtls_example.py  question_answer_demo.py  simple_example.py
sdk-py/indexify/: __init__.py  client.py  data_containers.py  exceptions.py  extractor.py  extractor_binding.py  http_client.py  index.py  indexify.py  langchain_integration.py  langchain_wrappers.py  memory.py  repository.py  settings.py  (+1 more)
server/: Cargo.toml  Cross.toml  Makefile  build.rs  sample_config.toml  sample_config.yaml
server-next/: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  run_tests.sh
src_py/: pyproject.toml
(+2506 files in other folders)
