[package]
name = "dataplane-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tonic = { version = "0.14.2", features = ["tls-ring"] }
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["yaml"] }
nanoid = "0.4"
hostname = "0.4"
sysinfo = "0.32"
nvml-wrapper = "0.10"
tracing = "0.1"
sha2 = "0.10"

[build-dependencies]
tonic-prost-build = "0.14.2"
anyhow = "1.0"
