[package]
name = "dataplane"
version = "0.1.0"
edition = "2024"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
resolver = "2"

[dependencies]
anyhow = "1.0.100"
hyper = "1.7.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
