[package]
name = "dataplane"
version = "0.1.0"
edition = "2021"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
resolver = "2"

[dependencies]
async-trait = "0.1.81"
anyhow = "1.0.100"
aws-config = "1.8.11"
aws-sdk-s3 = "1.115.0"
aws-sdk-sso = "1.90.0"
bytes = { version = "1.10.1", features = ["serde"] }
futures = "0.3.31"
gethostname = "1.1.0"
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-util = { version = "0.1.18", features = ["full"] }
prometheus-client = "0.24.0"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.14.2", features = ["channel", "tls-aws-lc"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.6"

[build-dependencies]
anyhow = "1.0.98"
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
tonic-prost-build = "0.14.2"
