[tool.poetry]
name = "indexify-executor"
version = "0.2.48"
description = "Executor for Indexify"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/tensorlakeai/indexify"
repository = "https://github.com/tensorlakeai/indexify"
packages = [
    { include = "executor", from="src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "2.10.4"
httpx = { version = "0.27.2", extras = ["http2"] }
pyyaml = "^6"
httpx-sse = "^0.4.0"
grpcio = "1.68.1"
indexify-python-utils = { path = "../python_utils", develop = true }
indexify-function-executor = { path = "../function_executor", develop = true }

[tool.poetry.dev-dependencies]
black = "^24.10.0"
pylint = "^2.4.0"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
