[tool.poetry]
name = "indexify-executor"
# Increment indexify package version if incrementing version here.
version = "0.2.0"
description = "Executor for Indexify"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/tensorlakeai/indexify"
repository = "https://github.com/tensorlakeai/indexify"
packages = [
    { include = "executor", from="src", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "2.10.4"
httpx = { version = "^0.28.1", extras = ["http2"] }
pyyaml = "^6"
httpx-sse = "^0.4.0"
grpcio = "1.68.1"
indexify-function-executor = { path = "../function_executor", develop = true }
tensorlake = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^2.4.0"

[build-system]
requires = ["poetry==2.0.0"]
build-backend = "poetry.core.masonry.api"
