[tool.poetry]
name = "indexify-extractors"
version = "0.0.1"
description = "Extractors Interfaces for Indexify"
authors = ["diptanu <diptanuc@gmail.com>", "Kanchi Shah <kanchi.shah957@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"