[tool.poetry]
name = "function-executor"
# Increment indexify package version if incrementing version here.
version = "0.2.0"
description = "Function Executor for Indexify"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/tensorlakeai/indexify"
repository = "https://github.com/tensorlakeai/indexify"

[tool.poetry.scripts]
function-executor = "function_executor.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "2.10.4"
cloudpickle = "^3.1.0"
structlog = "^24.4.0"
grpcio = "1.68.1"
grpcio-tools = "1.68.1"
tensorlake = "^0.1.6"
python_utils = { path = "../python_utils", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^2.4.0"

[build-system]
requires = ["poetry==2.0.0"]
build-backend = "poetry.core.masonry.api"
