[tool.poetry]
name = "indexify"
# Incremented if any of the components provided in this packages are updated.
version = "0.4.39"
description = "Open Source Indexify components and helper tools"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/tensorlakeai/indexify"
repository = "https://github.com/tensorlakeai/indexify"

[tool.poetry.scripts]
indexify-cli = "indexify.cli:cli"

[tool.poetry.dependencies]
# Common dependencies
python = "^3.10"
nanoid = "^2.0.0"
# pyyaml is provided by tensorlake

# Executor only
aiohttp = "^3.12.15"
# mTLS support for httpx 0.28.1 is broken, wait for 0.28.2 to see if the bug is fixed
httpx = { version = "0.27.2", extras = ["http2"] }
pydantic = "^2.12"
prometheus-client = "^0.23.1"
psutil = "^7.0.0"
boto3 = "^1.40.47"
structlog = "25.4.0"
# Adds function-executor binary, utils lib, sdk used in indexify-cli commands.
# We need to specify the tensorlake version exactly because pip install doesn't respect poetry.lock files.
tensorlake = "0.2.66"
# Uncomment the next line to use local tensorlake package (only for development!)
# tensorlake = { path = "../tensorlake", develop = true }
# grpcio is provided by tensorlake
# grpcio-tools is provided by tensorlake

# CLI only
# click is provided by tensorlake
docker = "^7.1.0"

# Packages pinned to mitigate vulnerabilities, not a direct dependcy of tensorlake
requests = "^2.32.5"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
isort = "^6.0.1"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry==2.0.0"]
build-backend = "poetry.core.masonry.api"
