[tool.poetry]
name = "indexify-langchain"
version = "0.0.1"
description = ""
authors = ["Vijay Parthasarathy <vijay2win@gmail.com>", "Diptanu Choudhury <diptanuc@gmail.com>"]
readme = "README.md"
packages = [{include = "indexify_langchain"}]

[tool.poetry.dependencies]
python = "^3.11"
indexify= "^0"
langchain= "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
