[tool.poetry]
name = "indexify"
version = "0.2.45"
description = "Python Client for Indexify"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/tensorlakeai/indexify"
repository = "https://github.com/tensorlakeai/indexify"

[tool.poetry.scripts]
indexify-cli = "indexify.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
httpx = { version = "0.27.2", extras = ["http2"] }
pyyaml = "^6"
pydantic = "^2.10.2"
cloudpickle = "^3.1.0"
rich = "^13.9.2"
nanoid = "^2.0.0"
docker = "^7.1.0"
typer = "^0.12"
httpx-sse = "^0.4.0"
structlog = "^24.4.0"
grpcio = "1.68.1"
grpcio-tools = "1.68.1"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
pylint = "^2.4.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
