[tool.poetry]
name = "indexify"
version = "0.0.2"
description = "Python Client for Indexify"
authors = ["Diptanu Gon Choudhury <diptanuc@gmail.com>", "Vijay Parthasarathy <vijay2win@gmail.com>"]
license = "Apache 2.0"
readme = "README.rst"
homepage = "https://github.com/diptanu/indexify"
repository = "https://github.com/diptanu/indexify"

[tool.poetry.dependencies]
python = "^3.10.0"
asyncio = "^3.4.3"
aiohttp = "^3.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"

langchain = { version = "^0", optional = true }
openai = { version = "^0.27", optional = true }
google-api-python-client = { version = "^2.11", optional = true }

[tool.poetry.extras]
llm_tools = ["langchain", "openai", "google-api-python-client"]

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
