[package]
name = "indexify-server"
version = "0.1.22"
edition = "2021"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache-2.0"
build = "build.rs"
resolver = "2"

[workspace]
members = [
    ".", "blob_store", 
    "data_model",
    "indexify_proto",
    "state_store",
    "task_scheduler",
    "utils",
]

[workspace.dependencies]
prost = "0.13.2"
prost-wkt = "0.6.0"
serde = "1.0.209"
tonic = "0.12.2"
prost-wkt-types = "0.6.0"
anyhow = "1.0.86"
serde_json = "1.0.127"
# https://github.com/rust-rocksdb/rust-rocksdb/issues/881
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1cf906dc4087f06631820f13855e6b27bd21b972", features=["multi-threaded-cf"]}
data_model = { path = "data_model" }
indexify_utils = { path = "utils" }
indexify_proto = { path = "indexify_proto" }
state_store = { path = "state_store" }
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.19.0"
serde_yml = "0.0.12"
figment = {version="0.10.19",features=["yaml"]}
axum = {version = "0.7.5", features = ["multipart", "macros", "tokio"]}
axum-server = "0.7.1"
tempfile = "3.12.0"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
object_store = {version= "0.11.0", features = ["aws"]}
futures = "0.3.30"
bytes = "1.7.1"
async-trait = "0.1.82"
tokio-stream = "0.1.15"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
async-stream = "0.3.5"
sha2 = "0.10.8"
nanoid = "0.4.0"


[dependencies]
data_model = { path = "data_model" }
state_store = { path = "state_store" }
indexify_proto = { path = "indexify_proto" }
task_scheduler = { path = "task_scheduler" }
blob_store = { path = "blob_store" }
serde={workspace = true}
serde_json={workspace = true}
anyhow = {workspace=true}
figment = {workspace=true}
clap = { version = "4.5.16", features = ["derive"] }
tracing ={workspace=true}
axum ={workspace=true}
tokio = {workspace=true}
axum-server={workspace=true}
futures = "0.3.30"
tokio-stream = "0.1.15"
tracing-subscriber = "0.3.18"
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sha2={workspace=true}
nanoid={workspace=true}
object_store.workspace = true
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }


[build-dependencies]
# All features enabled
vergen = { version = "8", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
tonic-build = { version = "0.12.2", features = ["prost"] }
prost-wkt-build = "0.6"

[package.metadata.deb]
maintainer = "Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
copyright = "2024, Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
license-file = ["LICENSE", "4"]
extended-description = """\
Indexify is a reactive structured extraction engine for un-structured data.
"""
section = "utility"
priority = "optional"
depends = "$auto"
