[package]
name = "indexify-server"
version = "0.1.22"
edition = "2021"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache-2.0"
build = "build.rs"
resolver = "2"

[workspace]
members = [
    ".", "blob_store", 
    "data_model", "metrics",
    "state_store",
    "task_scheduler",
    "utils",
]

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.89"
serde_json = "1.0.128"
# https://github.com/rust-rocksdb/rust-rocksdb/issues/881
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "87b6b2df89c1fafcfb53129f8c3304d636a94f2e", features=["multi-threaded-cf"]}
data_model = { path = "data_model" }
indexify_utils = { path = "utils" }
state_store = { path = "state_store" }
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.20.0"
serde_yml = "0.0.12"
figment = {version="0.10.19",features=["yaml"]}
axum = {version = "0.7.5", features = ["multipart", "macros", "tokio"]}
axum-server = "0.7.1"
tempfile = "3.12.0"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
object_store = {version= "0.11.0", features = ["aws"]}
futures = "0.3.30"
bytes = "1.7.2"
pin-project-lite = "0.2.14"
async-trait = "0.1.82"
tokio-stream = "0.1.16"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
async-stream = "0.3.5"
sha2 = "0.10.8"
nanoid = "0.4.0"
tower-http = { version = "0.5.2", default-features = false, features = [
    "cors",
    "trace",
] }
pin-project = "1.1.5"
ciborium = "0.2.2"
opentelemetry_sdk = "0.25.0"
opentelemetry = "0.25.0"
uuid = { version = "1.10.0", features = ["v4"] }

[dependencies]
async-stream = {workspace = true}
data_model = { path = "data_model" }
state_store = { path = "state_store" }
task_scheduler = { path = "task_scheduler" }
blob_store = { path = "blob_store" }
serde={workspace = true}
serde_json={workspace = true}
anyhow = {workspace=true}
figment = {workspace=true}
clap = { version = "4.5.17", features = ["derive"] }
tracing ={workspace=true}
axum ={workspace=true}
tokio = {workspace=true}
axum-server={workspace=true}
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sha2={workspace=true}
nanoid={workspace=true}
object_store.workspace = true
uuid = {workspace=true}
indexify_utils = {workspace=true}
tower-http = { workspace = true }
bytes.workspace = true
ciborium.workspace = true

[dev-dependencies]
tempfile = { workspace = true }


[build-dependencies]
# All features enabled
vergen = { version = "9.0.1", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[package.metadata.deb]
maintainer = "Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
copyright = "2024, Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
license-file = ["LICENSE", "4"]
extended-description = """\
Indexify is a reactive structured extraction engine for un-structured data.
"""
section = "utility"
priority = "optional"
depends = "$auto"
