[package]
name = "indexify-server"
version = "0.3.11"
edition = "2021"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache-2.0"
build = "build.rs"
resolver = "2"

[dependencies]
async-stream = "0.3.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
figment = { version = "0.10.19", features = ["yaml"] }
clap = { version = "4.5.45", features = ["derive"] }
tracing = "0.1.41"
axum = { version = "0.8.4", features = ["multipart", "macros", "tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
axum-server = "0.7.2"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sha2 = "0.10.9"
nanoid = "0.4.0"
object_store = { version="0.12.3", features = ["aws"] }
uuid = { version = "1.18.0", features = ["v4"] }
tower-http = { version = "0.6.6", default-features = false, features = ["cors", "trace"] }
bytes = "1.10.1"
ciborium = "0.2.2"
rand = "0.9.2"
hex = "0.4.3"
hyper = "1.7.0"
url = "2.5.6"
opentelemetry = { version = "0.30.0", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "metrics", "trace"] }
tracing-opentelemetry = "0.31.0"
tracing-appender = "0.2.3"
opentelemetry-otlp = { version = "0.30.0", features = ["tokio", "metrics", "trace", "grpc-tonic"] }
axum-tracing-opentelemetry = { version = "0.29.0", features = ["tracing_level_info"] }
tower-otel-http-metrics = { version = "0.16.0", features = ["axum"] }
base64 = "0.22.1"
tonic = "0.14.1"
prost = "0.14.1"
tonic-prost = "0.14.0"
tonic-reflection = "0.14.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
priority-queue = "2.5.0"
tokio-util = { version = "0.7.16", features = ["full"] }
if_chain = "1.0.2"
slatedb = { version="0.7.0" }
rust-embed = { version = "8.7.2", features = ["mime-guess"] }
pin-project-lite = "0.2.16"
pin-project = "1.1.10"
im = { version = "15.1.0" }
dashmap = "6.1.0"
once_cell = "1.21.3"
itertools = "0.14.0"
async-trait = "0.1.89"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rocksdb = { version = "0.24.0" }
strum = { version = "0.27.2", features = ["derive"] }
derive_builder = "0.20.2"
tempfile = "3.21.0"
thiserror = "2.0.16"

[dev-dependencies]
tempfile = "3.20.0"
strum = { version = "0.27.1", features = ["derive"] }
rocksdb = { version = "0.24.0" }
tokio = { version = "1.45.1", features = ["full", "test-util"] }

[build-dependencies]
anyhow = "1.0.98"
# All features enabled
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
tonic-prost-build = "0.14.0"

[package.metadata.deb]
maintainer = "Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
copyright = "2024, Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Indexify is a reactive structured extraction engine for un-structured data.
"""
section = "utility"
priority = "optional"
depends = "$auto"
